# machine-learning-algos

./: .gitignore  matrix.py  matrix_unit_tests.py  metrics.py  pyproject.toml  regression.py
mltools/matrix/: __init__.py  matrix.py
mltools/metrics/: __init__.py
mltools/regression/: __init__.py  regression.py
mltools/tests/: matrix_unit_test.py  regression_unit_test.py
